fix: Whitelist config env.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ MESSENGER_ACCESS_TOKEN=
 MESSENGER_APP_ID=
 MESSENGER_APP_SECRET=
 MESSENGER_VERIFY_TOKEN=
+MESSENGER_WHITELISTED_DOMAINS=
 
 WHATSAPP_ACCOUNT_SID=
 WHATSAPP_AUTH_TOKEN=
